2013-03-26 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Fix: Impact and Event element name.
	* Fix: Missing Comment node parsing.
	* Added all BinaryCriteria flags as constants.
	* Added flags support in APIService::getBinaryCriteria.

2013-03-25 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Added TYPO3 version dependency.
	* Added Impact and Event node.
	* Added ImpactList in APIService::getDepartureBoard* methods.
	* Added ImpactList in APIService::getPlanJourney method.

2012-01-17 Pierrick Caillon <pierrick@in-cite.net>
	* Corrected coordinates conversion using http://www.destineo.fr/extension/NavitiaPack/design/standard/javascript/conversion.js
	* Changed Debug output method. Now at the end of the HTML. Can be forced on top with navitia_debug=2 instead of 1.

2012-01-09 Pierrick Caillon <pierrick@in-cite.net>
	* Added AddressType Node.
	* Added type property in Address node.

2012-01-06 Pierrick Caillon <pierrick@in-cite.net>
	* Added getModeTypesByCode method in APIService

2011-10-31 Pierrick Caillon <pierrick@in-cite.net>
	* Finalized Network Selector control.
	* Added ModeType Selector control.
	* Bug fix: Forgotten node in the 2011-09-29 bug fix. EPPlanJourney.

2011-10-28 Pierrick Caillon <pierrick@in-cite.net>
	* Removed DummyService.
	* Added ConstantEditorControls.
	* Started Network Selector control.

2011-10-20 Pierrick Caillon <pierrick@in-cite.net>
	* Bug fix: float values in Time node after setting totalSeconds.

2011-10-12 Pierrick Caillon <pierrick@in-cite.net>
	* Bug fix: count parameter was not used in the API call of APIService::getNextDeparture

2011-10-07 Pierrick Caillon <pierrick@in-cite.net>
	* Updated autoload.php
	* Fixed attribute name in Proximity node.
	* Changed method name from getLineByStopAreaCode to getLineListByStopAreaCode in APIService to match existing methods naming and return type.
	* Bug fix in CoordinateConverter call in Coord node.

2011-10-06 Pierrick Caillon <pierrick@in-cite.net>