@@ -1,49 +1,52 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2012-01-09 16:16
+// This file was generated on 2013-06-19 16:32
 
 $extensionPath = t3lib_extMgm::extPath('ics_libnavitia');
+$extensionClassesPath = $extensionPath . 'Classes/';
 return array(
-	'tx_icslibnavitia_constanteditorcontrols' => $extensionPath . 'Classes/class.tx_icslibnavitia_ConstantEditorControls.php',
-	'tx_icslibnavitia_coordinateconverter' => $extensionPath . 'Classes/class.tx_icslibnavitia_CoordinateConverter.php',
-	'tx_icslibnavitia_debug' => $extensionPath . 'Classes/class.tx_icslibnavitia_Debug.php',
-	'tx_icslibnavitia_address' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Address.php',
-	'tx_icslibnavitia_addresstype' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_AddressType.php',
-	'tx_icslibnavitia_backward' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Backward.php',
-	'tx_icslibnavitia_call' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Call.php',
-	'tx_icslibnavitia_callvalue' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_CallValue.php',
-	'tx_icslibnavitia_city' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_City.php',
-	'tx_icslibnavitia_comment' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Comment.php',
-	'tx_icslibnavitia_coord' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Coord.php',
-	'tx_icslibnavitia_entrypoint' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_EntryPoint.php',
-	'tx_icslibnavitia_entrypointplanjourney' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_EntryPointPlanJourney.php',
-	'tx_icslibnavitia_forward' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Forward.php',
-	'tx_icslibnavitia_hang' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Hang.php',
-	'tx_icslibnavitia_hanglist' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_HangList.php',
-	'tx_icslibnavitia_journeyresult' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_JourneyResult.php',
-	'tx_icslibnavitia_line' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Line.php',
-	'tx_icslibnavitia_mode' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Mode.php',
-	'tx_icslibnavitia_modetype' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_ModeType.php',
-	'tx_icslibnavitia_network' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Network.php',
-	'tx_icslibnavitia_node' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Node.php',
-	'tx_icslibnavitia_nodelist' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_NodeList.php',
-	'tx_icslibnavitia_nota' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Nota.php',
-	'tx_icslibnavitia_proximity' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Proximity.php',
-	'tx_icslibnavitia_readonlynodelist' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_ReadOnlyNodeList.php',
-	'tx_icslibnavitia_route' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Route.php',
-	'tx_icslibnavitia_routepoint' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_RoutePoint.php',
-	'tx_icslibnavitia_section' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Section.php',
-	'tx_icslibnavitia_segment' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Segment.php',
-	'tx_icslibnavitia_site' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Site.php',
-	'tx_icslibnavitia_stop' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Stop.php',
-	'tx_icslibnavitia_stoparea' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_StopArea.php',
-	'tx_icslibnavitia_stoppoint' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_StopPoint.php',
-	'tx_icslibnavitia_summary' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Summary.php',
-	'tx_icslibnavitia_time' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Time.php',
-	'tx_icslibnavitia_undefined' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_Undefined.php',
-	'tx_icslibnavitia_vehiclejourney' => $extensionPath . 'Classes/DataObjects/class.tx_icslibnavitia_VehicleJourney.php',
-	'tx_icslibnavitia_inodelist' => $extensionPath . 'Classes/DataObjects/interface.tx_icslibnavitia_INodeList.php',
-	'tx_icslibnavitia_apiservice' => $extensionPath . 'Classes/Services/class.tx_icslibnavitia_APIService.php',
-	'tx_icslibnavitia_entrypointdefinition' => $extensionPath . 'Classes/Services/class.tx_icslibnavitia_EntryPointDefinition.php',
+	'tx_icslibnavitia_address' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Address.php',
+	'tx_icslibnavitia_addresstype' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_AddressType.php',
+	'tx_icslibnavitia_apiservice' => $extensionClassesPath . 'Services/class.tx_icslibnavitia_APIService.php',
+	'tx_icslibnavitia_backward' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Backward.php',
+	'tx_icslibnavitia_call' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Call.php',
+	'tx_icslibnavitia_callvalue' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_CallValue.php',
+	'tx_icslibnavitia_city' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_City.php',
+	'tx_icslibnavitia_comment' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Comment.php',
+	'tx_icslibnavitia_constanteditorcontrols' => $extensionClassesPath . 'class.tx_icslibnavitia_ConstantEditorControls.php',
+	'tx_icslibnavitia_coord' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Coord.php',
+	'tx_icslibnavitia_coordinateconverter' => $extensionClassesPath . 'class.tx_icslibnavitia_CoordinateConverter.php',
+	'tx_icslibnavitia_debug' => $extensionClassesPath . 'class.tx_icslibnavitia_Debug.php',
+	'tx_icslibnavitia_entrypoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_EntryPoint.php',
+	'tx_icslibnavitia_entrypointdefinition' => $extensionClassesPath . 'Services/class.tx_icslibnavitia_EntryPointDefinition.php',
+	'tx_icslibnavitia_entrypointplanjourney' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_EntryPointPlanJourney.php',
+	'tx_icslibnavitia_event' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Event.php',
+	'tx_icslibnavitia_forward' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Forward.php',
+	'tx_icslibnavitia_hang' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Hang.php',
+	'tx_icslibnavitia_hanglist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_HangList.php',
+	'tx_icslibnavitia_impact' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Impact.php',
+	'tx_icslibnavitia_inodelist' => $extensionClassesPath . 'DataObjects/interface.tx_icslibnavitia_INodeList.php',
+	'tx_icslibnavitia_journeyresult' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_JourneyResult.php',
+	'tx_icslibnavitia_line' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Line.php',
+	'tx_icslibnavitia_mode' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Mode.php',
+	'tx_icslibnavitia_modetype' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_ModeType.php',
+	'tx_icslibnavitia_network' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Network.php',
+	'tx_icslibnavitia_node' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Node.php',
+	'tx_icslibnavitia_nodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_NodeList.php',
+	'tx_icslibnavitia_nota' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Nota.php',
+	'tx_icslibnavitia_proximity' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Proximity.php',
+	'tx_icslibnavitia_readonlynodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_ReadOnlyNodeList.php',
+	'tx_icslibnavitia_route' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Route.php',
+	'tx_icslibnavitia_routepoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_RoutePoint.php',
+	'tx_icslibnavitia_section' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Section.php',
+	'tx_icslibnavitia_segment' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Segment.php',
+	'tx_icslibnavitia_site' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Site.php',
+	'tx_icslibnavitia_stop' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Stop.php',
+	'tx_icslibnavitia_stoparea' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_StopArea.php',
+	'tx_icslibnavitia_stoppoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_StopPoint.php',
+	'tx_icslibnavitia_summary' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Summary.php',
+	'tx_icslibnavitia_time' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Time.php',
+	'tx_icslibnavitia_undefined' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Undefined.php',
+	'tx_icslibnavitia_vehiclejourney' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_VehicleJourney.php',
 );
 ?>
